# nineball-ga4

./: .gitignore  CLAUDE.md  README.md  analyze_ga4_data.sql  cart.html  checkout.html  create_ga4_tables.sql  create_ga4_tables_corrected.sql  extract_ga4_data.py  extract_ga4_direct.py  index.html  product-laptop.html  product-phone.html  product-watch.html  products.html  pyproject.toml  run_server.sh  script.js  test_credentials.py  test_ga4_direct.py  thank-you.html
nineball_ga4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
